--- a/about/index.html
+++ b/about/index.html
@@ -165,7 +165,7 @@
 
     <div>
         <section id="prev">
-            &nbsp;
+            &nbsp;<a class="previous" href="http://maxsou.github.io/post/a/"><i class="icon-arrow-left"></i> secend title</a><br>
         </section><section id="next">
             &nbsp;<a class="next" href="http://maxsou.github.io/post/welcom/">你好 ， 欢迎来到 sou lab  <i class="icon-arrow-right"></i></a>
         </section>
