--- a/presentation/index.html
+++ b/presentation/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en-US" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
+<html class="no-js" lang="zh-cn" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8">
 
@@ -56,58 +56,48 @@
 <body lang="en">
 <header id="header">
     <figure>
-      <a href="/" border=0 id="logolink"><div class="icon-spf13-3" id="logo"> </div></a>
+      <a href="/" border=0 id="logolink"><div class="icon-idea-2" id="logo"> </div></a>
     </figure>
     <div id="byline">by maxsou</div>
     <nav id="nav">
             <ul id="mainnav">
             <li>
                 <a href="/post/">
-                <span class="icon"> <i aria-hidden="true" class="icon-quill"></i></span>
-                <span> blog </span>
+                <span class="icon"> <i aria-hidden="true" class="icon-pencil"></i></span>
+                <span> 博客 </span>
             </a>
             </li>
             <li>
             <a href="/project/">
                 <span class="icon"> <i aria-hidden="true" class="icon-console"></i></span>
-                <span> code </span>
+                <span> 代码 </span>
             </a>
             </li>
             <li>
             <a href="/presentation/">
-                <span class="icon"> <i aria-hidden="true" class="icon-stats"></i></span>
-                <span> talks </span>
+                <span class="icon"> <i aria-hidden="true" class="icon-images"></i></span>
+                <span> 旅游 </span>
             </a>
             </li>
             <li>
             <a href="/post/aboutme">
-                <span class="icon"> <i aria-hidden="true" class="icon-13"></i></span>
-                <span> me </span>
+                <span class="icon"> <i aria-hidden="true" class="icon-user"></i></span>
+                <span> 关于 </span>
             </a>
             </li>
         </ul>
 
             <ul id="social">
             <li id="share">
-                <span class="icon icon-bubbles"> </span>
                 <span class="title"> share </span>
                 <div class="dropdown share">
                     <ul class="social">
-                      <li> <a href="https://twitter.com/intent/tweet?status=Presentations-http%3a%2f%2fmaxsou.github.io%2fpresentation%2f" target="_blank" title="Follow me on Twitter" class="twitter"><span class="icon icon-twitter"></span>Twitter</a> </li>
+                    <li> <a href="http://www.weibo.com/komasan">Weibo</a> </li>
+                      
+                    <li> <a href="http://github.com/maxsou">GitHub</a> </li>
+
                     </ul>
                     <span class="subcount">sharing is caring</span>
-                </div>
-            </li>
-            <li id="follow">
-                <span class="icon icon-rocket"> </span>
-                <span class="title"> follow </span>
-                <div class="dropdown follow">
-                    <ul class="social">
-                        <li> <a href="http://feeds.feedburner.com/spf13" target="_blank" title="Subscribe by RSS" class="rss"><span class="icon icon-feed-2"></span>RSS</a> </li>
-                        <li> <a href="http://www.weibo.com/komasan" target="_blank" title="Follow me on Twitter" class="twitter"><span class="icon icon-twitter"></span>Twitter</a> </li>
-                        <li> <a href="http://github.com/maxsou" target="_blank" title="GitHub" class="github"><span class="icon icon-github"></span>GitHub</a> </li>
-                    </ul>
-                    <span class="subcount">join 10k+ subscribers &amp; followers</span>
                 </div>
             </li>
         </ul>
@@ -140,11 +130,11 @@
   <div>
     <p>
     &copy; 2016 <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-        <span itemprop="name">maxsou.</span></span>
-    <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons Attribution">Some rights reserved</a>; 
+        <span itemprop="name">maxsou.</span></span> Some rights reserved</a>; 
     please attribute properly and link back. <br>
-    Powered by <a href="http://gohugo.io">Hugo</a>.
-        Hosted by <a href="http://servergrove.com">ServerGrove</a>.
+    Powered by Hugo</a>.
+    Hosted by Github</a>.
+    thanks about spf13‘s Blog layout.
     </p>
   </div>
 </footer>
