修改高知，添加山口杨贵妃文章

--- a/project/ruby/index.html
+++ b/project/ruby/index.html
@@ -169,19 +169,19 @@
 
     <div>
         <section id="prev">
-            &nbsp;<a class="previous" href="http://maxsou.github.io/presentation/sikoku/"><i class="icon-arrow-left"></i> 【四国高松】村上春树《海边的卡夫卡》背景（舞台）地</a><br>
+            &nbsp;
         </section><section id="next">
-            &nbsp;<a class="next" href="http://maxsou.github.io/post/aboutme">关于maxsou <i class="icon-arrow-right"></i></a>
+            &nbsp;<a class="next" href="http://maxsou.github.io/post/start-to-github-blog">经验｜如何用Hugo＋Github写博客 <i class="icon-arrow-right"></i></a>
         </section>
     </div>
 
     <div>
         <section id="author">
              <h4>关于作者:</h4>
-             在某传统日企工作，工作内容是系统开发（2005年的Java项目的保守性质的开发）。
+             就职于某“正经”日企，做系统开发。
              喜欢编程，在学Ruby。
              喜欢动漫和旅游。游遍了日本四个岛屿－－北海道，本州，四国，九州。
-             因为出生于北方怕冷的缘故，对四国和九州情有独钟。
+             大概因为出生在北方天生怕冷，对四国和九州情有独钟。
         </section>
     </div>
 
@@ -199,9 +199,9 @@
     <p>
     &copy; 2016 <span itemprop="author" itemscope itemtype="http://schema.org/Person">
         <span itemprop="name">maxsou</span></span></a>; 
-    博客框架由Hugo支持。<br>
-    感谢Github的主机解析服务。
-    感谢spf13的博客模板。
+    感谢Hugo提供博客框架；<br>
+    感谢Github提供主机解析；
+    感谢spf13共享博客模板。
     </p>
   </div>
 </footer>
