--- a/project/ruby/index.html
+++ b/project/ruby/index.html
@@ -171,7 +171,7 @@
         <section id="prev">
             &nbsp;
         </section><section id="next">
-            &nbsp;<a class="next" href="http://maxsou.github.io/post/start-to-github-blog">经验｜如何用Hugo＋Github写博客 <i class="icon-arrow-right"></i></a>
+            &nbsp;<a class="next" href="http://maxsou.github.io/post/start-to-github-blog">多年经验｜如何用Hugo＋Github写博客 <i class="icon-arrow-right"></i></a>
         </section>
     </div>
 
