--- a/topics/aboutme/index.html
+++ b/topics/aboutme/index.html
@@ -2,8 +2,9 @@
 <html class="no-js" lang="zh-cn" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8">
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/styles/docco.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.5/highlight.min.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="description" content="">
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
@@ -46,14 +47,18 @@
     <link rel="canonical" href="http://maxsou.github.io/topics/aboutme/">
     <link href="http://maxsou.github.io/topics/aboutme/index.xml" rel="alternate" type="application/rss+xml" title="Aboutme" />
 
-    <link href='http://fonts.googleapis.com/css?family=Fjalla+One|Open+Sans:300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.useso.com/css?family=Fjalla+One|Open+Sans:300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/static/css/style.css">
+
+<script src="http://cdn.bootcss.com/highlight.js/9.0.0/highlight.min.js"></script>
+<link href="http://cdn.bootcss.com/highlight.js/9.0.0/styles/default.min.css" rel="stylesheet">
+<script>hljs.initHighlightingOnLoad();</script>
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 </head>
 
-<body lang="en">
+<body lang="zh">
 <header id="header">
     <figure>
       <a href="/" border=0 id="logolink"><div class="icon-screen" id="logo"> </div></a>
@@ -132,9 +137,8 @@
     <p>
     &copy; 2016 <span itemprop="author" itemscope itemtype="http://schema.org/Person">
         <span itemprop="name">maxsou</span></span></a>; 
-    感谢Hugo提供博客框架；<br>
-    感谢Github提供主机解析；
-    感谢spf13共享博客模板。
+    感谢<a href="http://gohugo.io/">Hugo</a>提供博客框架;
+    感谢<a href="http://spf13.com/">spf13</a>共享博客模板.
     </p>
   </div>
 </footer>
