添加九州旅行文章

--- a/presentation/yamaguchi-yangguifei/index.html
+++ b/presentation/yamaguchi-yangguifei/index.html
@@ -16,14 +16,14 @@
  
 <meta property="og:type" content="article"/>
 <meta property="og:description" content=""/>
-<meta property="og:title" content="浅谈狐仙｜从苏妲己到杨贵妃，从中国到日本 : spf13.com"/>
-<meta property="og:site_name" content="spf13 is Steve Francia"/>
+<meta property="og:title" content="浅谈狐仙｜从苏妲己到杨贵妃，从中国到日本 : sou-lab"/>
+<meta property="og:site_name" content="sou-lab maxsou"/>
 <meta property="og:image" content="" />
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="" />
 <meta property="og:image:height" content="" />
 <meta property="og:url" content="http://maxsou.github.io/presentation/yamaguchi-yangguifei/">
-<meta property="og:locale" content="en_US">
+<meta property="og:locale" content="zh_CN">
 <meta property="article:published_time" content="2015-08-18"/>
 <meta property="article:modified_time" content="2015-08-18"/>
 
@@ -36,23 +36,12 @@
 
 
 
-<meta name="twitter:card" content="summary">
-
-<meta name="twitter:site" content="@spf13">
-<meta name="twitter:title" content="浅谈狐仙｜从苏妲己到杨贵妃，从中国到日本 : spf13.com">
-<meta name="twitter:creator" content="@spf13">
-<meta name="twitter:description" content="">
-<meta name="twitter:image:src" content="">
-<meta name="twitter:domain" content="spf13.com">
-
-
-
     <base href="http://maxsou.github.io/">
-    <title> 浅谈狐仙｜从苏妲己到杨贵妃，从中国到日本 - spf13.com </title>
+    <title> 浅谈狐仙｜从苏妲己到杨贵妃，从中国到日本 - sou-lab </title>
     <link rel="canonical" href="http://maxsou.github.io/presentation/yamaguchi-yangguifei/">
     
 
-    <link href='http://fonts.useso.com/css?family=Fjalla+One|Open+Sans:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com /css?family=Fjalla+One|Open+Sans:300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/static/css/style.css">
 
 <script src="http://cdn.bootcss.com/highlight.js/9.0.0/highlight.min.js"></script>
@@ -199,7 +188,7 @@
 
     <div>
         <section id="prev">
-            &nbsp;<a class="previous" href="http://maxsou.github.io/post/aboutme"><i class="icon-arrow-left"></i> 自我介绍｜关于maxsou</a><br>
+            &nbsp;<a class="previous" href="http://maxsou.github.io/presentation/kyuusyu/"><i class="icon-arrow-left"></i> 旅行路线|九州旅游的“金三角”：福冈-熊本-大分</a><br>
         </section><section id="next">
             &nbsp;<a class="next" href="http://maxsou.github.io/presentation/sikoku/">四国高松｜村上春树《海边的卡夫卡》的舞台地 <i class="icon-arrow-right"></i></a>
         </section>
