--- a/project/index.html
+++ b/project/index.html
@@ -16,14 +16,14 @@
  
 <meta property="og:type" content="article"/>
 <meta property="og:description" content=""/>
-<meta property="og:title" content="Projects : spf13.com"/>
-<meta property="og:site_name" content="spf13 is Steve Francia"/>
+<meta property="og:title" content="Projects : sou-lab"/>
+<meta property="og:site_name" content="sou-lab maxsou"/>
 <meta property="og:image" content="" />
 <meta property="og:image:type" content="image/jpeg" />
 <meta property="og:image:width" content="" />
 <meta property="og:image:height" content="" />
 <meta property="og:url" content="http://maxsou.github.io/project/">
-<meta property="og:locale" content="en_US">
+<meta property="og:locale" content="zh_CN">
 <meta property="article:published_time" content="2016-03-09"/>
 <meta property="article:modified_time" content="2016-03-09"/>
 
@@ -31,23 +31,12 @@
 
 
 
-<meta name="twitter:card" content="summary">
-
-<meta name="twitter:site" content="@spf13">
-<meta name="twitter:title" content="Projects : spf13.com">
-<meta name="twitter:creator" content="@spf13">
-<meta name="twitter:description" content="">
-<meta name="twitter:image:src" content="">
-<meta name="twitter:domain" content="spf13.com">
-
-
-
     <base href="http://maxsou.github.io/">
-    <title> Projects - spf13.com </title>
+    <title> Projects - sou-lab </title>
     <link rel="canonical" href="http://maxsou.github.io/project/">
     <link href="http://maxsou.github.io/project/index.xml" rel="alternate" type="application/rss+xml" title="Projects" />
 
-    <link href='http://fonts.useso.com/css?family=Fjalla+One|Open+Sans:300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com /css?family=Fjalla+One|Open+Sans:300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="/static/css/style.css">
 
 <script src="http://cdn.bootcss.com/highlight.js/9.0.0/highlight.min.js"></script>
