--- a/project/index.html
+++ b/project/index.html
@@ -47,7 +47,7 @@
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 </head>
 
-<body lang="en">
+<body lang="zh">
 <header id="header">
     <figure>
       <a href="/" border=0 id="logolink"><div class="icon-screen" id="logo"> </div></a>
@@ -68,7 +68,7 @@
             </a>
             </li>
             <li>
-            <a href="/presentation/">
+            <a href="/tour/">
                 <span class="icon"> <i aria-hidden="true" class="icon-map-2"></i></span>
                 <span> 旅行 </span>
             </a>
