--- a/project/start-to-github-blog/index.html
+++ b/project/start-to-github-blog/index.html
@@ -157,9 +157,13 @@ $ brew install hugo</pre></code></p>
 		
 			<a class="tag-item" href="http://maxsou.github.io//tags/%E6%9D%A8%E8%B4%B5%E5%A6%83">杨贵妃</a>
 		
+			<a class="tag-item" href="http://maxsou.github.io//tags/%E6%A8%B1%E8%8A%B1">樱花</a>
+		
 			<a class="tag-item" href="http://maxsou.github.io//tags/%E6%B8%A9%E6%B3%89">温泉</a>
 		
 			<a class="tag-item" href="http://maxsou.github.io//tags/%E7%BB%8F%E5%8E%86">经历</a>
+		
+			<a class="tag-item" href="http://maxsou.github.io//tags/%E8%B5%8F%E8%8A%B1">赏花</a>
 		
 			<a class="tag-item" href="http://maxsou.github.io//tags/%E9%87%91%E4%B8%89%E8%A7%92">金三角</a>
 		
@@ -189,7 +193,7 @@ $ brew install hugo</pre></code></p>
 
     <div>
         <section id="prev">
-          
+          <a class="previous" href="http://maxsou.github.io/tour/sakura/"><i class="icon-arrow-left"></i> 东京樱花｜一个悠闲的周末</a><br>
       </section><section id="next">
           <a class="next" href="http://maxsou.github.io/post/aboutme">自我介绍｜关于maxsou <i class="icon-arrow-right"></i></a>
         </section>
