--- a/project/start-to-github-blog/index.html
+++ b/project/start-to-github-blog/index.html
@@ -2,7 +2,6 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <base href="http://maxsou.github.io/">
   <title>多年经验｜如何用Hugo＋Github写博客 - SOU研究室</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3, minimum-scale=1">
   <meta name="keywords" content="hugo,github,blog,">
@@ -15,14 +14,14 @@
   
   <meta name="twitter:description" content="">
   
-  <link rel="shortcut icon" href="img/favicon.ico"/>
-  <link rel="apple-touch-icon" href="apple-touch-icon.png" />
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png" />
-  <link rel="stylesheet" href="highlight/styles/github.css">
-  <script src="highlight/highlight.pack.js"></script>
+  <link rel="shortcut icon" href="http://maxsou.github.io/img/favicon.ico"/>
+  <link rel="apple-touch-icon" href="http://maxsou.github.io/apple-touch-icon.png" />
+  <link rel="apple-touch-icon-precomposed" href="http://maxsou.github.io/apple-touch-icon.png" />
+  <link rel="stylesheet" href="http://maxsou.github.io/highlight/styles/github.css">
+  <script src="http://maxsou.github.io/highlight/highlight.pack.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
-  <link rel="stylesheet" href="font/hack/css/hack.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="http://maxsou.github.io/font/hack/css/hack.min.css">
+  <link rel="stylesheet" href="http://maxsou.github.io/css/style.css">
 </head>
 
 <body>
@@ -137,13 +136,15 @@ $ brew install hugo</pre></code></p>
 <div class="article-tags">
   <span></span>
   
-  <a href="/tags/hugo">Hugo</a>
+  <a href="http://maxsou.github.io/tags/hugo">Hugo</a>
   
-  <a href="/tags/github">Github</a>
+  <a href="http://maxsou.github.io/tags/github">Github</a>
   
-  <a href="/tags/blog">Blog</a>
+  <a href="http://maxsou.github.io/tags/blog">Blog</a>
   
 </div>
+
+
 
 
 
@@ -380,7 +381,7 @@ $(document).ready(function(){
     if (false === done) {
       event.preventDefault();
       var orgVal = $(this).find('#search').val();
-      $(this).find('#search').val('site:http:\/\/maxsou.github.io\/} ' + orgVal);
+      $(this).find('#search').val('site:http:\/\/maxsou.github.io\/ ' + orgVal);
       done = true;
       $(this).submit();
     }
