--- a/about/link/index.html
+++ b/about/link/index.html
@@ -2,12 +2,12 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>常看博客 - SOU研究室</title>
+  <title>链接｜常看博客 - SOU研究室</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3, minimum-scale=1">
   
   <meta name="description" content="coderzh http://blog.coderzh.com/ http://www.gohugo.org/post/ tonybai http://tonybai.com/">
   <meta name="author" content="maxsou">
-  <meta itemprop="name" content="常看博客 - SOU研究室">
+  <meta itemprop="name" content="链接｜常看博客 - SOU研究室">
   <meta itemprop="description" content="coderzh http://blog.coderzh.com/ http://www.gohugo.org/post/ tonybai http://tonybai.com/">
   <meta itemprop="image" content="http://maxsou.github.io/img/author.jpg">
   
@@ -61,7 +61,7 @@
 	<article itemprop="articleBody">
     <header class="article-info clearfix">
   <h1 itemprop="name">
-      <a href="http://maxsou.github.io/about/link/" title="常看博客" itemprop="url">常看博客</a>
+      <a href="http://maxsou.github.io/about/link/" title="链接｜常看博客" itemprop="url">链接｜常看博客</a>
   </h1>
   <p class="article-author">By
     
@@ -118,7 +118,7 @@
 
 
   <div class="article-share" id="share">
-    <div data-url="http://maxsou.github.io/about/link/" data-title="常看博客" data-tsina="3246341605" class="share clearfix">
+    <div data-url="http://maxsou.github.io/about/link/" data-title="链接｜常看博客" data-tsina="3246341605" class="share clearfix">
     </div>
   </div>
 </footer>
