--- a/2018年-立几个flag/index.html
+++ b/2018年-立几个flag/index.html
@@ -75,17 +75,12 @@
 
 	<div class="article-content">
     
-    <ul>
-<li><p>开房车游日本</p>
-
-<ul>
-<li><p>回中国去九寨沟、西安旅游</p></li>
-
-<li><p>可以不用为了钱在公司工作</p></li>
-
-<li><p>找到一个能对国内和日本都有益的事业去做 并保证维持或者改善现在的生活</p></li>
-</ul></li>
-</ul>
+    <blockquote>
+<p>开房车游日本
+回中国去九寨沟、西安旅游
+可以不用为了钱在公司工作
+找到一个能对国内和日本都有益的事业去做 并保证维持或者改善现在的生活</p>
+</blockquote>
 
 	</div>
   <footer class="article-footer clearfix">
