--- a/2019年/index.html
+++ b/2019年/index.html
@@ -5,10 +5,10 @@
   <title>2019年 - tutu caffe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3, minimum-scale=1">
   
-  <meta name="description" content="今年4月換了新部門，入社7年以來，這3個月學得最多，最有價值，也最開心。">
+  <meta name="description" content="今年4月换了新部门，入社7年以来，这三个月学到的最多，工作得也最开心。">
   
   <meta itemprop="name" content="2019年 - tutu caffe">
-  <meta itemprop="description" content="今年4月換了新部門，入社7年以來，這3個月學得最多，最有價值，也最開心。">
+  <meta itemprop="description" content="今年4月换了新部门，入社7年以来，这三个月学到的最多，工作得也最开心。">
   <meta itemprop="image" content="http://maxsou.github.io/img/author.jpg">
   
   
@@ -76,7 +76,7 @@
 	<div class="article-content">
     
     <blockquote>
-<p>今年4月換了新部門，入社7年以來，這3個月學得最多，最有價值，也最開心。</p>
+<p>今年4月换了新部门，入社7年以来，这三个月学到的最多，工作得也最开心。</p>
 </blockquote>
 
 	</div>
